--- a/README
+++ b/README
@@ -32,7 +32,8 @@ Khepera III Toolbox developed by
 	Bob Andries
 	Guillermo Fernandez Rodriguez
 	Pierre-François Laquerre
+        Jorge Soares
 
-Khepera IV Port performed by
+Khepera IV Toolbox ported by
 	Jorge Soares
 --------------------------------------------------------------------------------
